votingapp/k8s-manifests/vote/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: vote
spec:
  ingressClassName: nginx
  rules:
  - host: vote.conquerproject.io
    http:
      paths:
      - backend:
          service:
            name: vote
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
